--- a/kubeflow-pipelines/docling-standard/Containerfile
+++ b/kubeflow-pipelines/docling-standard/Containerfile
@@ -1,24 +1,26 @@
-FROM registry.access.redhat.com/ubi9/python-311:9.6-1755074620
+FROM quay.io/sclorg/python-311-c9s:c9s
 
 USER 0
 
 RUN cat /etc/redhat-release
 
-RUN dnf -y update --setopt=tsflags=nodocs && \
-    dnf clean all && \
-    dnf -y install libglvnd-glx glib2 && \
+RUN dnf -y install --best --nodocs --setopt=install_weak_deps=False dnf-plugins-core && \
+    dnf config-manager --best --nodocs --setopt=install_weak_deps=False --save && \
+    dnf config-manager --enable crb && \
+    dnf -y update && \
+    dnf -y install tesseract tesseract-devel tesseract-langpack-eng tesseract-osd leptonica-devel libglvnd-glx glib2 && \
     dnf -y clean all && \
     rm -rf /var/cache/dnf
 
-RUN mkdir -p /opt/app-root/bin && \
-    chown -R 1001:0 /opt/app-root
+RUN /usr/bin/fix-permissions /opt/app-root/src/.cache
+
+ENV TESSDATA_PREFIX=/usr/share/tesseract/tessdata/
 
 USER 1001
 
-WORKDIR /opt/app-root/bin
+WORKDIR /opt/app-root/src
 
 ENV OMP_NUM_THREADS=4 \
-    PYTHONUNBUFFERED=1 \
     PYTHONIOENCODING=UTF-8 \
     LC_ALL=en_US.UTF-8 \
     LANG=en_US.UTF-8 \
@@ -30,7 +32,12 @@ ENV OMP_NUM_THREADS=4 \
 # This will install torch with *only* cpu support
 # Remove the --extra-index-url part if you want to install all the gpu requirements
 # For more details in the different torch distribution visit https://pytorch.org/.
-RUN pip3 install --no-cache-dir docling --extra-index-url https://download.pytorch.org/whl/cpu
+RUN pip install --no-cache-dir docling --extra-index-url https://download.pytorch.org/whl/cpu && \
+    pip uninstall -y tesserocr && \
+    pip install --no-cache-dir --no-binary :all: tesserocr && \
+    chmod -R g+w /opt/app-root/lib/python3.11/site-packages && \
+    chmod -R g+w /opt/app-root/lib64/python3.11/site-packages && \
+    fix-permissions /opt/app-root -P
 
 ENV HF_HOME=/tmp/
 ENV TORCH_HOME=/tmp/
@@ -38,7 +45,7 @@ ENV TORCH_HOME=/tmp/
 RUN docling --version
 
 RUN echo "Downloading models..." && \
-    docling-tools models download -o "${DOCLING_ARTIFACTS_PATH}"
+    docling-tools models download layout tableformer -o "${DOCLING_ARTIFACTS_PATH}"
 
 # Running with `DOCLING_ARTIFACTS_PATH=/opt/app-root/src/.cache/docling/models` will use the
 # models included in the container image.
