Explicitly set Smoldocling in VLM pipeline
Signed-off-by: Fabiano Franz <contact@fabianofranz.com>

--- a/kubeflow-pipelines/docling-vlm/docling_convert_pipeline_compiled.yaml
+++ b/kubeflow-pipelines/docling-vlm/docling_convert_pipeline_compiled.yaml
@@ -254,14 +254,14 @@ deploymentSpec:
           \ PLC0415, E402\n    from docling.datamodel.base_models import InputFormat\
           \  # pylint: disable=import-outside-toplevel  # noqa: PLC0415, E402\n  \
           \  from docling.datamodel.pipeline_options import (  # pylint: disable=import-outside-toplevel\
-          \  # noqa: PLC0415, E402\n        VlmPipelineOptions,\n    )\n    from docling.pipeline.vlm_pipeline\
-          \ import VlmPipeline  # pylint: disable=import-outside-toplevel  # noqa:\
-          \ PLC0415, E402\n    from docling.document_converter import DocumentConverter,\
-          \ PdfFormatOption  # pylint: disable=import-outside-toplevel  # noqa: PLC0415,\
-          \ E402\n    from docling.datamodel.accelerator_options import AcceleratorDevice,\
-          \ AcceleratorOptions  # pylint: disable=import-outside-toplevel  # noqa:\
-          \ PLC0415, E402\n    from docling.datamodel.pipeline_options_vlm_model import\
-          \ ApiVlmOptions, ResponseFormat # pylint: disable=import-outside-toplevel\
+          \  # noqa: PLC0415, E402\n        VlmPipelineOptions,\n        smoldocling_vlm_conversion_options,\n\
+          \    )\n    from docling.pipeline.vlm_pipeline import VlmPipeline  # pylint:\
+          \ disable=import-outside-toplevel  # noqa: PLC0415, E402\n    from docling.document_converter\
+          \ import DocumentConverter, PdfFormatOption  # pylint: disable=import-outside-toplevel\
+          \  # noqa: PLC0415, E402\n    from docling.datamodel.accelerator_options\
+          \ import AcceleratorDevice, AcceleratorOptions  # pylint: disable=import-outside-toplevel\
+          \  # noqa: PLC0415, E402\n    from docling.datamodel.pipeline_options_vlm_model\
+          \ import ApiVlmOptions, ResponseFormat # pylint: disable=import-outside-toplevel\
           \  # noqa: PLC0415, E402\n\n    input_path_p = Path(input_path.path)\n \
           \   artifacts_path_p = Path(artifacts_path.path)\n    output_path_p = Path(output_path.path)\n\
           \    output_path_p.mkdir(parents=True, exist_ok=True)\n\n    input_pdfs\
@@ -303,7 +303,8 @@ deploymentSpec:
           \                ),\n            ),\n            prompt=\"OCR the full page\
           \ to markdown.\",\n            timeout=600,\n            response_format=ResponseFormat.MARKDOWN,\n\
           \            headers={\n                \"Authorization\": f\"Bearer {remote_model_api_key}\"\
-          ,\n            },\n        )\n    else:\n        pipeline_options = VlmPipelineOptions()\n\
+          ,\n            },\n        )\n    else:\n        pipeline_options = VlmPipelineOptions(\n\
+          \            vlm_options=smoldocling_vlm_conversion_options\n        )\n\
           \n    pipeline_cls = VlmPipeline\n    pipeline_options.artifacts_path =\
           \ artifacts_path_p\n    pipeline_options.document_timeout = float(timeout_per_document)\n\
           \    pipeline_options.accelerator_options = AcceleratorOptions(\n      \
