--- a/kubeflow-pipelines/docling-standard/standard_convert_pipeline_compiled.yaml
+++ b/kubeflow-pipelines/docling-standard/standard_convert_pipeline_compiled.yaml
@@ -2,6 +2,7 @@
 # Name: data-processing-docling-standard-pipeline
 # Description: Docling standard convert pipeline by the Data Processing Team
 # Inputs:
+#    docling_accelerator_device: str [Default: 'auto']
 #    docling_allow_external_plugins: bool [Default: False]
 #    docling_enrich_code: bool [Default: False]
 #    docling_enrich_formula: bool [Default: False]
@@ -52,6 +53,10 @@ components:
             schemaVersion: 0.0.1
           description: Path to the input directory containing PDF files.
       parameters:
+        accelerator_device:
+          defaultValue: auto
+          isOptional: true
+          parameterType: STRING
         allow_external_plugins:
           defaultValue: false
           description: Whether or not to allow external plugins.
@@ -160,6 +165,8 @@ components:
               input_path:
                 componentInputArtifact: pipelinechannel--import-pdfs-output_path
             parameters:
+              accelerator_device:
+                componentInputParameter: pipelinechannel--docling_accelerator_device
               allow_external_plugins:
                 componentInputParameter: pipelinechannel--docling_allow_external_plugins
               enrich_code:
@@ -205,6 +212,8 @@ components:
           parameterType: LIST
         pipelinechannel--create-pdf-splits-Output-loop-item:
           parameterType: LIST
+        pipelinechannel--docling_accelerator_device:
+          parameterType: STRING
         pipelinechannel--docling_allow_external_plugins:
           parameterType: BOOLEAN
         pipelinechannel--docling_enrich_code:
@@ -329,18 +338,19 @@ deploymentSpec:
           \ ocr: bool = True,\n    force_ocr: bool = False,\n    ocr_engine: str =\
           \ \"tesseract\",\n    allow_external_plugins: bool = False,\n    enrich_code:\
           \ bool = False,\n    enrich_formula: bool = False,\n    enrich_picture_classes:\
-          \ bool = False,\n    enrich_picture_description: bool = False,\n):\n   \
-          \ \"\"\"\n    Convert a list of PDF files to JSON and Markdown using Docling\
-          \ (Standard Pipeline).\n\n    Args:\n        input_path: Path to the input\
-          \ directory containing PDF files.\n        artifacts_path: Path to the directory\
-          \ containing Docling models.\n        output_path: Path to the output directory\
-          \ for converted JSON and Markdown files.\n        pdf_filenames: List of\
-          \ PDF file names to process.\n        pdf_backend: Backend to use for PDF\
-          \ processing.\n        image_export_mode: Mode to export images.\n     \
-          \   table_mode: Mode to detect tables.\n        num_threads: Number of threads\
-          \ to use per document processing.\n        timeout_per_document: Timeout\
-          \ per document processing.\n        ocr: Whether or not to use OCR if needed.\n\
-          \        force_ocr: Whether or not to force OCR.\n        ocr_engine: Engine\
+          \ bool = False,\n    enrich_picture_description: bool = False,\n    accelerator_device:\
+          \ str = \"auto\",  # parameter for accelerator device\n):\n    \"\"\"\n\
+          \    Convert a list of PDF files to JSON and Markdown using Docling (Standard\
+          \ Pipeline).\n\n    Args:\n        input_path: Path to the input directory\
+          \ containing PDF files.\n        artifacts_path: Path to the directory containing\
+          \ Docling models.\n        output_path: Path to the output directory for\
+          \ converted JSON and Markdown files.\n        pdf_filenames: List of PDF\
+          \ file names to process.\n        pdf_backend: Backend to use for PDF processing.\n\
+          \        image_export_mode: Mode to export images.\n        table_mode:\
+          \ Mode to detect tables.\n        num_threads: Number of threads to use\
+          \ per document processing.\n        timeout_per_document: Timeout per document\
+          \ processing.\n        ocr: Whether or not to use OCR if needed.\n     \
+          \   force_ocr: Whether or not to force OCR.\n        ocr_engine: Engine\
           \ to use for OCR.\n        allow_external_plugins: Whether or not to allow\
           \ external plugins.\n        enrich_code: Whether or not to enrich code.\n\
           \        enrich_formula: Whether or not to enrich formula.\n        enrich_picture_classes:\
@@ -395,8 +405,15 @@ deploymentSpec:
           \ = True\n    pipeline_options.table_structure_options.do_cell_matching\
           \ = True\n    pipeline_options.generate_page_images = True\n    pipeline_options.table_structure_options.mode\
           \ = TableFormerMode(table_mode)\n    pipeline_options.document_timeout =\
-          \ float(timeout_per_document)\n    pipeline_options.accelerator_options\
-          \ = AcceleratorOptions(\n        num_threads=num_threads, device=AcceleratorDevice.AUTO\n\
+          \ float(timeout_per_document)\n    # device validation\n    allowed_devices\
+          \ = [\"auto\", \"cpu\", \"cuda\", \"mps\"]\n    if accelerator_device.lower()\
+          \ not in allowed_devices:\n        raise ValueError(\n            f\"Invalid\
+          \ accelerator_device: {accelerator_device}. Must be one of {allowed_devices}\"\
+          \n        )\n\n    # Map string to AcceleratorDevice enum\n    device_map\
+          \ = {\n        \"auto\": AcceleratorDevice.AUTO,\n        \"cpu\": AcceleratorDevice.CPU,\n\
+          \        \"cuda\": AcceleratorDevice.CUDA,\n        \"mps\": AcceleratorDevice.MPS,\n\
+          \    }\n\n    pipeline_options.accelerator_options = AcceleratorOptions(\n\
+          \        num_threads=num_threads, device=device_map[accelerator_device.lower()]\n\
           \    )\n\n    backend_to_impl = {\n        PdfBackend.PYPDFIUM2.value: (\n\
           \            \"docling.backend.pypdfium2_backend\",\n            \"PyPdfiumDocumentBackend\"\
           ,\n        ),\n        PdfBackend.DLPARSE_V1.value: (\n            \"docling.backend.docling_parse_backend\"\
@@ -646,6 +663,8 @@ root:
               taskOutputParameter:
                 outputParameterKey: Output
                 producerTask: create-pdf-splits
+            pipelinechannel--docling_accelerator_device:
+              componentInputParameter: docling_accelerator_device
             pipelinechannel--docling_allow_external_plugins:
               componentInputParameter: docling_allow_external_plugins
             pipelinechannel--docling_enrich_code:
@@ -697,6 +716,10 @@ root:
           name: import-pdfs
   inputDefinitions:
     parameters:
+      docling_accelerator_device:
+        defaultValue: auto
+        isOptional: true
+        parameterType: STRING
       docling_allow_external_plugins:
         defaultValue: false
         isOptional: true
