--- a/kubeflow-pipelines/docling-vlm/vlm_convert_pipeline_compiled.yaml
+++ b/kubeflow-pipelines/docling-vlm/vlm_convert_pipeline_compiled.yaml
@@ -318,18 +318,15 @@ deploymentSpec:
           \ doc_converter = DocumentConverter(\n        format_options={\n       \
           \     InputFormat.PDF: PdfFormatOption(\n                pipeline_cls=pipeline_cls,\n\
           \                pipeline_options=pipeline_options,\n            )\n   \
-          \     }\n    )\n\n    easyocr_path_p = artifacts_path_p / \"EasyOcr\"\n\
-          \    os.environ[\"MODULE_PATH\"] = str(easyocr_path_p)\n    os.environ[\"\
-          EASYOCR_MODULE_PATH\"] = str(easyocr_path_p)\n\n    results = doc_converter.convert_all(input_pdfs,\
-          \ raises_on_error=True)\n\n    for result in results:\n        doc_filename\
-          \ = result.input.file.stem\n\n        output_json_path = output_path_p /\
-          \ f\"{doc_filename}.json\"\n        print(f\"docling-vlm-convert: saving\
-          \ {output_json_path}\", flush=True)\n        result.document.save_as_json(output_json_path,\
-          \ image_mode=ImageRefMode(image_export_mode))\n\n        output_md_path\
-          \ = output_path_p / f\"{doc_filename}.md\"\n        print(f\"docling-vlm-convert:\
-          \ saving {output_md_path}\", flush=True)\n        result.document.save_as_markdown(output_md_path,\
-          \ image_mode=ImageRefMode(image_export_mode))\n\n    print(\"docling-vlm-convert:\
-          \ done\", flush=True)\n\n"
+          \     }\n    )\n\n    results = doc_converter.convert_all(input_pdfs, raises_on_error=True)\n\
+          \n    for result in results:\n        doc_filename = result.input.file.stem\n\
+          \n        output_json_path = output_path_p / f\"{doc_filename}.json\"\n\
+          \        print(f\"docling-vlm-convert: saving {output_json_path}\", flush=True)\n\
+          \        result.document.save_as_json(output_json_path, image_mode=ImageRefMode(image_export_mode))\n\
+          \n        output_md_path = output_path_p / f\"{doc_filename}.md\"\n    \
+          \    print(f\"docling-vlm-convert: saving {output_md_path}\", flush=True)\n\
+          \        result.document.save_as_markdown(output_md_path, image_mode=ImageRefMode(image_export_mode))\n\
+          \n    print(\"docling-vlm-convert: done\", flush=True)\n\n"
         image: quay.io/fabianofranz/docling-ubi9:2.54.0
         resources:
           cpuLimit: 4.0
@@ -381,32 +378,31 @@ deploymentSpec:
           \    from docling.utils.model_downloader import download_models # pylint:\
           \ disable=import-outside-toplevel\n\n    output_path_p = Path(output_path.path)\n\
           \    output_path_p.mkdir(parents=True, exist_ok=True)\n\n    if pipeline_type\
-          \ == MODEL_TYPE_STANDARD:\n        # Standard pipeline: download traditional\
-          \ models\n        download_models(\n            output_dir=output_path_p,\n\
-          \            progress=True,\n            with_layout=True,\n           \
-          \ with_tableformer=True,\n            with_easyocr=False,\n        )\n \
-          \   elif pipeline_type == MODEL_TYPE_VLM and remote_model_endpoint_enabled:\n\
-          \        # VLM pipeline with remote model endpoint: Download minimal required\
-          \ models\n        # Only models set are what lives in fabianofranz repo\n\
-          \        # TODO: figure out what needs to be downloaded or removed\n   \
-          \     download_models(\n            output_dir=output_path_p,\n        \
-          \    progress=False,\n            force=False,\n            with_layout=True,\n\
-          \            with_tableformer=True,\n            with_code_formula=False,\n\
-          \            with_picture_classifier=False,\n            with_smolvlm=False,\n\
-          \            with_smoldocling=False,\n            with_smoldocling_mlx=False,\n\
-          \            with_granite_vision=False,\n            with_easyocr=False,\n\
-          \        )\n    elif pipeline_type == MODEL_TYPE_VLM:\n        # VLM pipeline\
-          \ with local models: Download VLM models for local inference\n        #\
-          \ TODO: set models downloaded by model name passed into KFP pipeline ex:\
-          \ smoldocling OR granite-vision\n        download_models(\n            output_dir=output_path_p,\n\
-          \            with_smolvlm=True,\n            with_smoldocling=True,\n  \
-          \          progress=False,\n            force=False,\n            with_layout=False,\n\
-          \            with_tableformer=False,\n            with_code_formula=False,\n\
-          \            with_picture_classifier=False,\n            with_smoldocling_mlx=False,\n\
-          \            with_granite_vision=False,\n            with_easyocr=False,\n\
-          \        )\n    else:\n        raise ValueError(f\"Invalid pipeline_type:\
-          \ {pipeline_type}. Must be '{MODEL_TYPE_STANDARD}' or '{MODEL_TYPE_VLM}'\"\
-          )\n\n"
+          \ == \"standard\":\n        # Standard pipeline: download traditional models\n\
+          \        download_models(\n            output_dir=output_path_p,\n     \
+          \       progress=True,\n            with_layout=True,\n            with_tableformer=True,\n\
+          \            with_easyocr=False,\n        )\n    elif pipeline_type == \"\
+          vlm\" and remote_model_endpoint_enabled:\n        # VLM pipeline with remote\
+          \ model endpoint: Download minimal required models\n        # Only models\
+          \ set are what lives in fabianofranz repo\n        # TODO: figure out what\
+          \ needs to be downloaded or removed\n        download_models(\n        \
+          \    output_dir=output_path_p,\n            progress=False,\n          \
+          \  force=False,\n            with_layout=True,\n            with_tableformer=True,\n\
+          \            with_code_formula=False,\n            with_picture_classifier=False,\n\
+          \            with_smolvlm=False,\n            with_smoldocling=False,\n\
+          \            with_smoldocling_mlx=False,\n            with_granite_vision=False,\n\
+          \            with_easyocr=False,\n        )\n    elif pipeline_type == \"\
+          vlm\":\n        # VLM pipeline with local models: Download VLM models for\
+          \ local inference\n        # TODO: set models downloaded by model name passed\
+          \ into KFP pipeline ex: smoldocling OR granite-vision\n        download_models(\n\
+          \            output_dir=output_path_p,\n            with_smolvlm=True,\n\
+          \            with_smoldocling=True,\n            progress=False,\n     \
+          \       force=False,\n            with_layout=False,\n            with_tableformer=False,\n\
+          \            with_code_formula=False,\n            with_picture_classifier=False,\n\
+          \            with_smoldocling_mlx=False,\n            with_granite_vision=False,\n\
+          \            with_easyocr=False,\n        )\n    else:\n        raise ValueError(f\"\
+          Invalid pipeline_type: {pipeline_type}. Must be 'standard' or 'vlm'\")\n\
+          \n"
         image: quay.io/fabianofranz/docling-ubi9:2.54.0
     exec-import-pdfs:
       container:
