Add files in kubeflow-pipelines/common to compile-kfp workflow
Signed-off-by: Ali Maredia <amaredia@redhat.com>

--- a/.github/workflows/compile-kfp.yml
+++ b/.github/workflows/compile-kfp.yml
@@ -6,12 +6,14 @@ on:
     paths:
       - "kubeflow-pipelines/docling-standard/**"
       - "kubeflow-pipelines/docling-vlm/**"
+      - "kubeflow-pipelines/common/**"
       - ".github/workflows/compile-kfp.yml"
   push:
     branches: [ main ]
     paths:
       - "kubeflow-pipelines/docling-standard/**"
       - "kubeflow-pipelines/docling-vlm/**"
+      - "kubeflow-pipelines/common/**"
       - ".github/workflows/compile-kfp.yml"
 
 permissions:
