Update Mergify configuration

--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -9,10 +9,9 @@ pull_request_rules:
       - "#approved-reviews-by>=1"              # At least one approval
       - "#changes-requested-reviews-by=0"      # No outstanding change requests
       - "#review-requested=0"                  # No pending review requests
-      - "#approved-reviews-by-codeowner>=1"    # CODEOWNER must approve
       
       # Add flexible check for all workflows:
-      - "-check-failure"              # No failing checks allowed   
+      - "check-failure=~^$"             # No failing checks allowed   
 
       # PR must be ready for merge
       - "-draft"                               # Not a draft
