Update Mergify configuration to clarify the purpose of the .mergify.yml file

--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -1,5 +1,4 @@
-# .mergify.yml - Configuration for "All Reviewers Must Approve"
-# Perfect for new teams wanting thorough review process
+# .mergify.yml defines the rules for merging pull requests.
 
 pull_request_rules:
   # PRIMARY MERGE RULE: Single comprehensive rule for auto-merge
