Update GitHub Action to conditionally validate notebooks based on file changes

--- a/.github/workflows/validate-notebooks.yml
+++ b/.github/workflows/validate-notebooks.yml
@@ -41,6 +41,7 @@ jobs:
           ipython kernel install --name "python3" --user
 
       - name: Validate Notebooks with pytest
+        if: steps.changed-files.outputs.has_changes == 'true'
         run: |
           export CHANGED_NOTEBOOKS='${{ steps.changed-files.outputs.all_changed_files }}'
           
