Removing auto-running of pre-commit, move tests to Makefile
This commit changes the harness running ruff
and nbstripout from pre-commit to a Makefile.

Developers can run `make format-python` to run `ruff format`
and format python files.

Developers can also run `make format-notebooks` to
run `nbstripout` and format notebooks.

`make format-{notebook,python}-check`
checks that files have been appropriately formatted.

These checks are run as workflows when python or
notebooks files are changed.

Signed-off-by: Ali Maredia <amaredia@redhat.com>

--- a/.github/workflows/validate-and-execute-notebooks.yml
+++ b/.github/workflows/validate-and-execute-notebooks.yml
@@ -1,4 +1,4 @@
-name: Smoke Tests for Notebooks
+name: Validation & Smoke Tests for Notebooks
 
 on:
   pull_request:
@@ -105,8 +105,11 @@ jobs:
 
       - name: Install Testing Tools
         run: |
-          pip install papermill ipykernel
+          pip install papermill ipykernel nbstripout
           ipython kernel install --name "python3" --user
+
+      - name: Run Formatting Tests
+        run: make format-notebooks-check
 
       - name: Execute Notebooks
         run: |
